[tool.poetry]
name = "asucks"
version = "0.2.0"
description = "SOCKS5 async python server"
authors = ["Gabriel Tincu <gabi@aiven.io>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "7.1.2"
aiohttp = "3.7.2"

[tool.poetry.dev-dependencies]
pre-commit = "2.8.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
