[tool.poetry]
name = "asucks"
version = "0.2.0"
description = "SOCKS5 async python server"
authors = ["Gabriel Tincu <gabi@aiven.io>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pre-commit = "2.8.2"
pylint = "^2.6.0"
pytest = "6.1.2"
pytest-asyncio = "^0.14.0"
aiohttp-socks = "^0.5.5"
pytest-cov = "^2.10.1"

[tool.poetry.scripts]
sproxy = "asucks.server:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
